==> wagiminator/Development-Boards/CH32V003A4M6_DevBoard/software/encoder/include/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  #if F_CPU > 24000000
  FLASH->ACTLR = FLASH_ACTLR_LATENCY_1;                     // 1 cycle latency
  #endif
  CLK_init();                                               // init system clock
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  STK_init();
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
    RCC->APB2PCENR |= RCC_IOPAEN | RCC_IOPCEN | RCC_IOPDEN;
  #endif
}

void CLK_init_HSE(void) {
  RCC->APB2PCENR |= RCC_AFIOEN;                                 // enable auxiliary clock module
  AFIO->PCFR1    |= AFIO_PCFR1_PA12_REMAP;                      // pins PA1-PA2 for external crystal
  RCC->CTLR       = RCC_HSION | RCC_HSEON | ((HSITRIM) << 3);   // enable HSE and keep HSI on
  while(!(RCC->CTLR & RCC_HSERDY));                             // wait till HSE is ready
  RCC->CFGR0      = CLK_DIV | RCC_SW_HSE;                       // set clock divider, use HSE for system clock
  while((RCC->CFGR0 & RCC_SWS) != RCC_SWS_HSE);                 // wait till HSE is used as system clock source
}

void CLK_reset(void) {
  RCC->CTLR |= RCC_HSION;                                       // enable HSI
  while(!(RCC->CTLR & RCC_HSIRDY));                             // wait until HSI is ready
  RCC->CFGR0 = 0x00000000;                                      // select HSI as system clock source
  while(RCC->CFGR0 & RCC_SWS);                                  // wait until HSI is selected
  RCC->CTLR  = RCC_HSION | ((HSITRIM) << 3);                    // use HSI only
  RCC->INTR  = 0x009F0000;                                      // disable interrupts and clear flags
  FLASH->ACTLR = FLASH_ACTLR_LATENCY_0;                         // no flash wait states
}

void DLY_ticks(uint32_t n) {
  uint32_t end = STK->CNT + n;
  while(((int32_t)(STK->CNT - end)) < 0);
}

void BOOT_now(void) {
  FLASH->KEYR = 0x45670123;
  FLASH->KEYR = 0xCDEF89AB;
  FLASH->BOOT_MODEKEYR = 0x45670123;
  FLASH->BOOT_MODEKEYR = 0xCDEF89AB;      // unlock flash
  FLASH->STATR |= (uint16_t)1<<14;        // start bootloader after software reset
  FLASH->CTLR  |= FLASH_CTLR_LOCK;        // lock flash
  RCC->RSTSCKR |= RCC_RMVF;               // clear reset flags
  PFIC->CFGR = PFIC_RESETSYS | PFIC_KEY3; // perform software reset
}

void IWDG_start(uint16_t ms) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  IWDG->CTLR = 0x5555;                  // allow register modification
  while(IWDG->STATR & IWDG_PVU);        // wait for clock register to be ready
  IWDG->PSCR = 0b111;                   // set LSI clock prescaler 256
  while(IWDG->STATR & IWDG_RVU);        // wait for reload register to be ready
  IWDG->RLDR = ms >> 1;                 // set watchdog counter reload value
  IWDG->CTLR = 0xAAAA;                  // load reload value into watchdog counter
  IWDG->CTLR = 0xCCCC;                  // enable IWDG
}

void IWDG_reload(uint16_t ms) {
  IWDG->CTLR = 0x5555;                  // allow register modification
  while(IWDG->STATR & IWDG_RVU);        // wait for reload register to be ready
  IWDG->RLDR = ms >> 1;                 // set watchdog counter reload value
  IWDG->CTLR = 0xAAAA;                  // load reload value into watchdog counter
}

void STDBY_WFI_now(void) {
  RCC->APB1PCENR |= RCC_PWREN;          // enable power module
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to standby (deep sleep)
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFI();                              // wait for interrupt
  PWR->CTLR   &= ~PWR_CTLR_PDDS;        // disable PDDS again
}

void STDBY_WFE_now(void) {
  RCC->APB1PCENR |= RCC_PWREN;          // enable power module
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to standby (deep sleep)
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFE();                              // wait for event
  PWR->CTLR   &= ~PWR_CTLR_PDDS;        // disable PDDS again
}

void reset_handler(void) {
  uint32_t *src, *dst;
  
  // Set pointers, vectors, processor status, and interrupts
  asm volatile(
  " .option push              \n\
    .option norelax           \n\
    la gp, __global_pointer$  \n\
    .option pop               \n\
    la sp, _eusrstack         \n"
    #if __GNUC__ > 10
    ".option arch, +zicsr     \n"
    #endif
  " li a0, 0x88               \n\
    csrw mstatus, a0          \n\
    li a1, 0x3                \n\
    csrw 0x804, a1            \n\
    la a0, jump_reset         \n\
    or a0, a0, a1             \n\
    csrw mtvec, a0            \n\
    csrw mepc, %[main]        \n"
    : : [main] "r" (main) : "a0", "a1" , "memory"
  );

  // Copy data from FLASH to RAM
  src = &_data_lma;
  dst = &_data_vma;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Init system
  SYS_init();

  // Return
  asm volatile("mret");
}
